--- a/banded.html
+++ b/banded.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul>
+        <li><a href="banner-home.html">Home</a></li>
+        <li><a href="#">BAnded</a></li>
+        <li><a href="/banner-home.html">Banner Home</a> </li>
+        <li><a href="/boxy.html">Boxy</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="/feed.html">Feed</a></li>
+        <li><a href="/grid.html">Grid</a></li>
+        <li><a href="/marketing.html">Marketing</a></li>
+        <li><a href="/realty.html">Realty</a></li>
+    
+    </ul>
     <div class="content">
         <div class="menu">
             <div class="right">right</div>
