--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="banded.html">BAnded</a></li>
-        <li><a href="#">Banner Home</a> </li>
+        <li><a href="banner-home.html">Banner Home</a> </li>
         <li><a href="blog.html">blog</a> </li>
         <li><a href="boxy/boxy.html">Boxy</a></li>
         <li><a href="contact/contact.html">Contact</a></li>
@@ -20,21 +19,5 @@
         <li><a href="reality/realty.html">Realty</a></li>
         <li><a href="sidebar/sidebar.html">Sidebar</a></li>
     </ul>
-    <div class="p1">
-        <div class="menu">
-            <div class="mleft">left</div>
-            <div class="mright">right</div>
-        </div>
-        <div class="container">
-            <div class="contop">top</div>
-            <div class="concenter">
-                <div class="container-left">conleft</div>
-                <div class="midle">midle</div>
-                <div class="container-left">conright</div>
-            </div>
-            
-        </div>
-      <div class="footer2">Footer</div>
-    </div>
 </body>
 </html>
