--- a/banner-home.html
+++ b/banner-home.html
@@ -12,13 +12,13 @@
         <li><a href="banded.html">BAnded</a></li>
         <li><a href="#">Banner Home</a> </li>
         <li><a href="blog.html">blog</a> </li>
-        <li><a href="boxy/boxy.html">Boxy</a></li>
-        <li><a href="contact/contact.html">Contact</a></li>
+        <li><a href="Boxy/boxy.html">Boxy</a></li>
+        <li><a href="Contact/contact.html">Contact</a></li>
         <li><a href="feed.html">Feed</a></li>
         <li><a href="grid.html">Grid</a></li>
-        <li><a href="marketing/marketing.html">Marketing</a></li>
-        <li><a href="reality/realty.html">Realty</a></li>
-        <li><a href="sidebar/sidebar.html">Sidebar</a></li>
+        <li><a href="Marketing/marketing.html">Marketing</a></li>
+        <li><a href="Reality/realty.html">Realty</a></li>
+        <li><a href="Sidebar/sidebar.html">Sidebar</a></li>
     </ul>
     <div class="p1">
         <div class="menu">
