--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,12 +10,12 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="../banded.html">BAnded</a></li>
-        <li><a href="../banner-home.html">Banner Home</a> </li>
-        <li><a href="../blog.html">blog</a> </li>
-        <li><a href="../boxy/boxy.html">Boxy</a></li>
-        <li><a href="../contact/contact.html">Contact</a></li>
-        <li><a href="../feed.html">Feed</a></li>
-        <li><a href="../grid.html">Grid</a></li>
+        <li><a href="../Max/banded.html">Banner Home</a> </li>
+        <li><a href="../Max/blog.html">blog</a> </li>
+        <li><a href="../Boxy/boxy.html">Boxy</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="../Max/feed.html">Feed</a></li>
+        <li><a href="../Max/grid.html">Grid</a></li>
         <li><a href="../marketing/marketing.html">Marketing</a></li>
         <li><a href="../reality/realty.html">Realty</a></li>
         <li><a href="../sidebar/sidebar.html">Sidebar</a></li>
