--- a/Max/banded.html
+++ b/Max/banded.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li><a href="banner-home.html">Home</a></li>
-        <li><a href="#">Banded</a></li>
+        <li><a href="banded.html">Banded</a></li>
         <li><a href="banner-home.html">Banner Home</a> </li>
         <li><a href="feed.html">Feed</a></li>
         <li><a href="grid.html">Grid</a></li>
