--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Max/banded.html">BAnded</a></li>
         <li><a href="Max/banner-home.html">Banner Home</a> </li>
         <li><a href="Max/blog.html">blog</a> </li>
