--- a/banded.html
+++ b/banded.html
@@ -13,12 +13,11 @@
         <li><a href="banner-home.html">Banner Home</a> </li>
         <li><a href="feed.html">Feed</a></li>
         <li><a href="grid.html">Grid</a></li>
-        <li><a href="../Boxy/boxy.html">Boxy</a></li>
-        <li><a href="../Contact/contact.html">Contact</a></li>
-        <li><a href="../Marketing/marketing.html">Marketing</a></li>
-        <li><a href="../Reality/realty.html">Realty</a></li>
-        <li><a href="../Sidebar/sidebar.html">sidebar</a></li>
-    
+        <li><a href="boxy.html">Boxy</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="marketing.html">Marketing</a></li>
+        <li><a href="reality.html">Realty</a></li>
+        <li><a href="sidebar.html">sidebar</a></li>
     </ul>
     <div class="content">
         <div class="menu">
