--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Max/banded.html">BAnded</a></li>
-        <li><a href="Max/banner-home.html">Banner Home</a> </li>
-        <li><a href="Max/blog.html">blog</a> </li>
-        <li><a href="Boxy/boxy.html">Boxy</a></li>
-        <li><a href="Contact/contact.html">Contact</a></li>
+        <li><a href="banded.html">BAnded</a></li>
+        <li><a href="banner-home.html">Banner Home</a> </li>
+        <li><a href="blog.html">blog</a> </li>
+        <li><a href="grid.html">Grid</a></li>
         <li><a href="feed.html">Feed</a></li>
-        <li><a href="Max/">Grid</a></li>
-        <li><a href="Marketing/marketing.html">Marketing</a></li>
-        <li><a href="Reality/realty.html">Realty</a></li>
-        <li><a href="Sidebar/sidebar.html">Sidebar</a></li>
+        <li><a href="boxy.html">Boxy</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="marketing.html">Marketing</a></li>
+        <li><a href="reality.html">Realty</a></li>
+        <li><a href="sidebar.html">Sidebar</a></li>
     </ul>
 </body>
 </html>
