--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="banded.html">BAnded</a></li>
-        <li><a href="banner-home.html">Banner Home</a> </li>
-        <li><a href="blog.html">blog</a> </li>
-        <li><a href="grid.html">Grid</a></li>
-        <li><a href="feed.html">Feed</a></li>
-        <li><a href="boxy.html">Boxy</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="marketing.html">Marketing</a></li>
-        <li><a href="reality.html">Realty</a></li>
-        <li><a href="sidebar.html">Sidebar</a></li>
+        <li><a href="week1/banded.html">BAnded</a></li>
+        <li><a href="week1/banner-home.html">Banner Home</a> </li>
+        <li><a href="week1/blog.html">blog</a> </li>
+        <li><a href="week1/grid.html">Grid</a></li>
+        <li><a href="week1/feed.html">Feed</a></li>
+        <li><a href="week1/boxy.html">Boxy</a></li>
+        <li><a href="week1/contact.html">Contact</a></li>
+        <li><a href="week1/marketing.html">Marketing</a></li>
+        <li><a href="week1/reality.html">Realty</a></li>
+        <li><a href="week1/sidebar.html">Sidebar</a></li>
+        <li><a href="assiment/login.html">exercise</a></li>
     </ul>
 </body>
 </html>
