--- a/week1/marketing.html
+++ b/week1/marketing.html
@@ -4,34 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="realty.css">
+    <link rel="stylesheet" href="marketing.css">
 </head>
 <body>
     <ul>
-        <li><a href="index.html">Home</a></li>
+     
         <li><a href="banded.html">BAnded</a></li>
         <li><a href="banner-home.html">Banner Home</a> </li>
+        <li><a href="blog.html">blog</a> </li>
         <li><a href="feed.html">Feed</a></li>
         <li><a href="grid.html">Grid</a></li>
-        <li><a href="blog.html">blog</a> </li>
         <li><a href="boxy.html">Boxy</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="marketing.html">Marketing</a></li>
         <li><a href="reality.html">Realty</a></li>
         <li><a href="sidebar.html">Sidebar</a></li>
     </ul>
+
     <div class="menu">Menu</div>
     <div class="container">
         <div class="containertop">top</div>
         <div class="containerbutton">
             <div class="conleft">left</div>
-            <div class="conright">
-                <div class="top">top</div>
-                <div class="buttom">
-                    <div class="br">buttom right</div>
-                    <div class="bl">buttom left</div>
-                </div>
-            </div>
+            <div class="center">center</div>
+            <div class="right">right</div>
         </div>
         <div class="footer">Footer</div>
     </div>
