--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <p>Assment 1</p>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="week1/banded.html">BAnded</a></li>
         <li><a href="week1/banner-home.html">Banner Home</a> </li>
         <li><a href="week1/blog.html">blog</a> </li>
