--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <p>Assment 1</p>
+        <h1>Assment 1</h1>
         <li><a href="#">Home</a></li>
         <li><a href="week1/banded.html">BAnded</a></li>
         <li><a href="week1/banner-home.html">Banner Home</a> </li>
@@ -20,7 +20,7 @@
         <li><a href="week1/marketing.html">Marketing</a></li>
         <li><a href="week1/reality.html">Realty</a></li>
         <li><a href="week1/sidebar.html">Sidebar</a></li>
-        <p>Assiment 3</p>
+        <h1>Assiment 3</h1>
         <li><a href="assiment/login.html">exercise</a></li>
     </ul>
 </body>
